overflow fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,6 +99,7 @@ body {
 main {
   background: $background-color;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body.night, main.night {
